2014-05-20  Vanessa Gil <vanessa.gil@artica.es>

	* godmode/gis_maps/configure_gis_map.php: Fixed
	typographic error.

2014-05-20  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_api.php: Fixed the function
	"get_events_with_user". Fixed the json output format.

2014-05-20  Vanessa Gil <vanessa.gil@artica.es>

	* operation/events/events.build_query.php
	  operation/events/events.php
	  operation/events/events_list.php: Added filters
	to event list.

2014-05-20  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* pandora_console/include/styles/pandora.css: Changed
	the name of the class "transparent" for "alpha50".

	* pandora_console/godmode/agentes/module_manager_editor_common.php:
	Changed the class "transparent" of the elements for the
	class "alpha50".

2014-05-20  Vanessa Gil <vanessa.gil@artica.es>

	* godmode/agentes/configurar_agente.php: Change double
	quotes by single in 'WMI query'.

2014-05-19  Vanessa Gil <vanessa.gil@artica.es>

	* godmode/agentes/planned_downtime.editor.php: Fixed 
	the date range.

2014-05-19  Vanessa Gil <vanessa.gil@artica.es>

	* extras/pandoradb_migrate_5.0.x_to_5.1.postgreSQL.sql
	  extras/pandoradb_migrate_5.0.x_to_5.1.mysql.sql
	  extras/pandoradb_migrate_5.0.x_to_5.1.oracle.sql
	  pandoradb_data.sql
	  pandoradb.data.postgreSQL.sql
	  pandoradb.data.oracle.sql: Deleted module templates
	by default.

2014-05-19  Vanessa Gil <vanessa.gil@artica.es>

	* include/languages/ca.mo
	include/languages/tr.mo
	include/languages/de.mo
	include/languages/ja.mo
	include/languages/pt_BR.mo
	include/languages/ru.mo
	include/languages/el.mo
	include/languages/nl.mo
	include/languages/es.po
	include/languages/pl.mo
	include/languages/it.mo
	include/languages/pt.mo
	include/languages/index.pot
	include/languages/zh_CN.mo
	include/languages/cs.mo
	include/languages/es.mo
	include/languages/en_GB.mo
	include/languages/sk.mo
	include/languages/en.mo
	include/languages/ar.mo
	include/languages/fr.mo: Update languages.
