@@ -249,6 +249,10 @@ CREATE TABLE tagente_modulo (
 	id_category NUMBER(10, 0) default 0 NOT NULL,
 	disabled_types_event CLOB default '',
 	module_macros CLOB default '',
+	min_ff_event_normal INTEGER default 0,
+        min_ff_event_warning INTEGER default 0,
+        min_ff_event_critical INTEGER default 0,
+        each_ff NUMBER(1, 0) default 0
 	
 	CONSTRAINT t_agente_modulo_wizard_level_cons CHECK (wizard_level IN ('basic','advanced','nowizard'))
 );
