@@ -234,6 +234,10 @@ CREATE TABLE IF NOT EXISTS `tagente_modulo` (
 	`id_category` int(10) default 0,
 	`disabled_types_event` TEXT NOT NULL,
 	`module_macros` TEXT NOT NULL,
+	`min_ff_event_normal` int(4) unsigned default '0',
+	`min_ff_event_warning` int(4) unsigned default '0',
+	`min_ff_event_critical` int(4) unsigned default '0',
+	`each_ff` tinyint(1) unsigned default '0',
 	PRIMARY KEY  (`id_agente_modulo`),
 	KEY `main_idx` (`id_agente_modulo`,`id_agente`),
 	KEY `tam_agente` (`id_agente`),
